<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Auto Ride</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Warming !</string>
    <string name="dialog_message">No Internet</string>
    <string name="toolbar_profile">street</string>
    <string name="google_direction_api_key">AIzaSyA7xrbZRCPDgyYwNwz9Rb5AI9EMfPNpWWA</string>
    <string name="what_s_your_email_address">What\'s your email Address ?</string>
    <string name="what_s_your_phone">What\'s your phone number ?</string>
    <string name="hint_email">Enter your email (Optional)</string>
    <string name="hint_enter_your_number">Enter Your Number</string>
    <string name="whats_s_your_name">Whats\'s your name?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_new_your_password">Enter your new password</string>
    <string name="enter_promo_code">Enter promotion code  (Optional)</string>
    <string name="create_your_account_password">Create account Password</string>
    <string name="what_s_your_password">What\'s your password ?</string>
    <string name="promo_code">Promotion Code</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_just_a_ride">Just A Ride</string>
    <string name="label_more_than">More Than</string>
    <string name="label_not_available">N/A</string>
    <string name="label_select">Select :</string>
    <string name="login">Login</string>
    <string name="loginwelcome">LOGIN</string>
    <string name="max_size">Max Size</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile_edit">Profile</string>
    <string name="name_edit">Name</string>
    <string name="email">Email</string>
    <string name="email_edit">Email</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_edit">Mobile</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="skip">Skip</string>
    <string name="resend_code_in">Re send code in</string>
    <string name="enter_the_4_digit_code_sent_to_you">Enter the 4-digit code sent to you</string>
    <string name="with_you_when_you_want_to_keep_n_moving_forward">With you When You Want To Keep</string>
    <string name="at">at</string>
    <string name="places">Places</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="enter_the_promo_code">Enter the Promo Code</string>
    <string name="add_code">ADD CODE</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="_4_people">4 People</string>
    <string name="_60">र 60</string>
    <string name="amount">Amount</string>
    <string name="amount_trip_list">Amount</string>
    <string name="base_fare">Base Fare</string>
    <string name="base_fare_receipt">Base Fare</string>
    <string name="base_rate">Base rate</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_ok">OK</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="car_quality">Car Quality</string>
    <string name="car_quality_bad_remark">Car Quality</string>
    <string name="carname">CarName</string>
    <string name="cash">Cash</string>
    <string name="cash_help_page">Cash:</string>
    <string name="cash_receipt">Cash</string>
    <string name="cash_trip_details">Cash</string>
    <string name="cash_trip_list">Cash</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="cleanliness_bad_remark">Cleanliness</string>
    <string name="comfort">Comfort</string>
    <string name="comfort_bad_remark">Comfort</string>
    <string name="Confirmation">confirmation</string>
    <string name="contact">Contact</string>
    <string name="date">Date</string>
    <string name="destination_required">Destination Required</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="drawer_close">1</string>
    <string name="drawer_open">1</string>
    <string name="rider_name">Rider name</string>
    <string name="driving">Driving</string>
    <string name="driving_bad_remark">Driving</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_account_toolbar">Edit Account</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="eta">ETA</string>
    <string name="excellent">Excellent</string>
    <string name="feedback_bad_car_quality">Car Quality</string>
    <string name="feedback_bad_cleanliness">Cleanliness</string>
    <string name="feedback_bad_comfort">Comfort</string>
    <string name="feedback_bad_driving">Driving</string>
    <string name="feedback_bad_other">Other</string>
    <string name="feedback_bad_service">Service</string>
    <string name="feedback_good_car_quality">Car Quality</string>
    <string name="feedback_good_cleanliness">Cleanliness</string>
    <string name="feedback_good_comfort">Comfort</string>
    <string name="feedback_good_driving">Driving</string>
    <string name="feedback_good_other">Other</string>
    <string name="feedback_good_service">Service</string>
    <string name="free_rides">Free Rides</string>
    <string name="get_fare_estimate">Get Fare Estimate</string>
    <string name="give_friends_free_ride_credit_to_try_la_taxi_you_ll_get_50_off_each_off_your_next_2_rides_when_they_start_riding">Give friends free ride credit to try la taxi. You\'ll get र50 off each off your next 2 rides when they start riding.</string>
    <string name="address">Add Home</string>
    <string name="i_had_an_issue_with_reciept_or_payment">I had an issue with reciept or payment</string>
    <string name="i_lost_an_item">I Lost an item</string>
    <string name="i_was_incorrectly_charged_cancellation_fee">I was incorrectly charged cancellation fee</string>
    <string name="i_would_like_a_refund">I would like a refund</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="kilometer_rate">Kilometer rate</string>
    <string name="kilometers">Kilometers</string>
    <string name="kilometers_receipt">Kilometers</string>
    <string name="la_go">la GO</string>
    <string name="la_l">la xl</string>
    <string name="la_taxi">la taxi</string>
    <string name="la_taxi_login">la taxi</string>
    <string name="la_xxl">la xxl</string>
    <string name="min_fare">Min Fare</string>
    <string name="minute_rate">Minute rate</string>
    <string name="minutes">Minutes</string>
    <string name="minutes_receipt">Minutes</string>
    <string name="my_rider_was_unprofessional">My rider was Unprofessional</string>
    <string name="my_vehicle_wasn_t_what_i_expected">My vehicle wasn\'t what i expected</string>
    <string name="name">Name</string>
    <string name="name_example_com">name@example.com</string>
    <string name="name_example_com_drawer">name@example.com</string>
    <string name="name_help_page">Name</string>
    <string name="name_settings">Name</string>
    <string name="no_network_available">No Internet Connection "\n" "\n" Please check your internet connection and Try again !</string>
    <string name="location_disable">GPS connection is disable "\n" "\n" Please enable your GPS connection !</string>
    <string name="no_trips_taken_yet">No trips Taken Yet</string>
    <string name="number">number</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="other_bad_remark">Other</string>
    <string name="message_check_phone_forget_password">Invalid phone number. Please try again with valid phone number</string>
    <string name="payment">payment</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="please_take_a_few_moments_to_give_us_feedback_on_your_recent_ride_with_the_la_taxi_rider">Please take a few moments to give us feedback on your recent ride with the la taxi Rider</string>
    <string name="please_take_a_few_moments_to_give_us_feedback_on_your_recent_ride_with_the_la_taxi_rider_bad_feedback">Please take a few moments to give us feedback on your recent ride with the la taxi Rider</string>
    <string name="profile">Profile</string>
    <string name="promotion">Promotion</string>
    <string name="promotion_rate">Promotion rate</string>
    <string name="promotion_receipt">Promotion</string>
    <string name="promotions">Promotions</string>
    <string name="rate">RATE \n YOUR TRIP</string>
    <string name="re_send_code_in">Re send code in</string>
    <string name="receipt">Receipt</string>
    <string name="request_la">Request LA</string>
    <string name="requesting">Requesting...</string>
    <string name="sample_lorem_ipsum_small">lorem ipsum small</string>
    <string name="say_thanks">Say Thanks!</string>
    <string name="say_thanks_good">Say Thanks!</string>
    <string name="search_or_type_a_location_here">Search or Type a Location here</string>
    <string name="service">Service</string>
    <string name="service_bad_remark">Service</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="settings">Settings</string>
    <string name="settings_layout_drawer">Settings</string>
    <string name="share_your_invite_code">Share your invite code</string>
    <string name="phone_for_forgot_pass">Phone for recover password</string>
    <string name="reset_your_account_password">Reset your account password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">SIGN UP !</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_tracking">Tracking</string>
    <string name="btn_document">Documents</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="message">Message</string>
    <string name="source">Source</string>
    <string name="sub_total">Sub Total</string>
    <string name="sub_total_receipt">Sub Total</string>
    <string name="submit">Submit</string>
    <string name="submit_bad_remark">Submit</string>
    <string name="submit_rider_good">Submit</string>
    <string name="subtotal_rate">Subtotal rate</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_ride_history">Your Ride</string>
    <string name="btn_logout">Log Out</string>
    <string name="tv_address">Address</string>
    <string name="et_hint_house">House</string>
    <string name="et_hint_road">Road</string>
    <string name="et_hint_unit">Unit</string>
    <string name="et_hint_fax">Fax</string>
    <string name="et_hint_zip_code">Zip Code</string>
    <string name="et_hint_city">City</string>
    <string name="et_hint_country">Country</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_reference">My User</string>
    <string name="title_send_money">Send</string>
    <string name="title_request_money">Request</string>
    <string name="title_load_money">Load</string>
    <string name="btn_account">Account</string>
    <string name="title_money_transaction">Transaction</string>
    <string name="btn_location_tracking">Tracking</string>
</resources>