<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_40sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/tv_address"
            android:textColor="@color/login_edit_text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_rider_settings_house"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_house"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_rider_settings_road"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_road"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_rider_settings_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_unit"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_rider_settings_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="center|start"
                android:hint="@string/et_hint_fax"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_rider_settings_zip_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_zip_code"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_rider_settings_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_city"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_rider_settings_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:hint="@string/et_hint_country"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_save"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>