<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/RegistrationParent">

            <LinearLayout style="@style/RegistrationTitleParent">

                <ImageView
                    style="@style/RegistrationTitleImage"
                    app:srcCompat="@drawable/ic_title_password" />

                <TextView
                    style="@style/RegistrationTitleLabel"
                    android:text="@string/what_s_your_password" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_rider_login_password"
                style="@style/RegistrationInputBox"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_70sdp"
        android:gravity="center"
        android:onClick="onRiderForgotPasswordClicked"
        android:text="@string/forgot_password"
        android:textColor="@color/blue" />

    <android.support.design.widget.FloatingActionButton
        style="@style/RegistrationFAB"
        android:onClick="onRiderLogin"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_arrow_registration" />
</FrameLayout>