<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/RegistrationParent">

            <LinearLayout style="@style/RegistrationTitleParent">

                <ImageView
                    style="@style/RegistrationTitleImage"
                    android:src="@drawable/ic_title_name" />

                <TextView
                    style="@style/RegistrationTitleLabel"
                    android:text="@string/whats_s_your_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_rider_registration_first_name"
                    style="@style/RegistrationInputBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_rider_registration_last_name"
                    style="@style/RegistrationInputBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        style="@style/RegistrationFAB"
        android:onClick="onRiderRegistrationName"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_arrow_registration" />
</FrameLayout>